tests/ui/opts/unknown_param_ident.stderr
error: unknown generic parameter
 --> tests/ui/opts/unknown_param_ident.rs:4:18
  |
4 | #[funcmap(params(S))]
  |                  ^
